--- a/pom.xml
+++ b/pom.xml
@@ -22,16 +22,26 @@
   </repositories>
 
   <dependencies>
-    <dependency>
-      <groupId>com.github.rubenlagus</groupId>
-      <artifactId>TelegramBots</artifactId>
-      <version>v2.3.5</version>
-    </dependency>
-    <dependency>
-        <groupId>org.kohsuke</groupId>
-        <artifactId>github-api</artifactId>
-        <version>1.77</version>
-    </dependency>
+      <dependency>
+          <groupId>com.github.rubenlagus</groupId>
+          <artifactId>TelegramBots</artifactId>
+          <version>v2.3.5</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpclient</artifactId>
+          <version>4.5.2</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>fluent-hc</artifactId>
+          <version>4.5.2</version>
+      </dependency>
+      <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.7</version>
+      </dependency>
       <dependency>
           <groupId>org.flywaydb</groupId>
           <artifactId>flyway-core</artifactId>
