--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
           <version>19.0</version>
       </dependency>
       <dependency>
+          <groupId>org.postgresql</groupId>
+          <artifactId>postgresql</artifactId>
+          <version>9.4.1208</version>
+      </dependency>
+      <dependency>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
           <version>4.10</version>
@@ -77,15 +82,55 @@
 
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.5.1</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>shade</goal>
+                    </goals>
+                    <configuration>
+                        <filters>
+                            <filter>
+                                <artifact>*:*</artifact>
+                                <excludes>
+                                    <exclude>config.properties</exclude>
+                                </excludes>
+                            </filter>
+                        </filters>
+                    </configuration>
+                </execution>
+            </executions>
+            <configuration>
+                <finalName>uber-${artifactId}-${version}</finalName>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>com.heroku.sdk</groupId>
+            <artifactId>heroku-maven-plugin</artifactId>
+            <version>1.1.1</version>
+            <configuration>
+                <includeTarget>false</includeTarget>
+                <includes>
+                    <include>target/uber-${artifactId}-${version}.jar</include>
+                </includes>
+                <appName>git-hub-bot</appName>
+                <processTypes>
+                    <web>java $JAVA_OPTS -cp target/uber-${artifactId}-${version}.jar me.blzr.github.App</web>
+                </processTypes>
+            </configuration>
+        </plugin>
     </plugins>
   </build>
 </project>
