--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
           <version>4.5.2</version>
       </dependency>
       <dependency>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpcore-nio</artifactId>
+          <version>4.4.5</version>
+      </dependency>
+      <dependency>
           <groupId>com.google.code.gson</groupId>
           <artifactId>gson</artifactId>
           <version>2.7</version>
